docs: add (please watch on mobile)

--- a/friends.html
+++ b/friends.html
@@ -123,7 +123,7 @@
     </div>
 
     <div id="no-mobile">
-      <span>Your Screen is too big!</span>
+      <span>Your Screen is too big! (please watch on mobile)</span>
     </div>
 
     <script
