--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     </form>
 
     <div id="no-mobile">
-      <span>Your Screen is too big!</span>
+      <span>Your Screen is too big! (please watch on mobile)</span>
     </div>
 
     <script
