--- a/chating.html
+++ b/chating.html
@@ -86,7 +86,7 @@
     </form>
 
     <div id="no-mobile">
-      <span>Your Screen is too big!</span>
+      <span>Your Screen is too big! (please watch on mobile) </span>
     </div>
 
     <script
