--- a/chats.html
+++ b/chats.html
@@ -111,7 +111,7 @@
     </nav>
 
     <div id="no-mobile">
-      <span>Your Screen is too big!</span>
+      <span>Your Screen is too big! (please watch on mobile)</span>
     </div>
 
     <script
